--- a/src/view/Login.form
+++ b/src/view/Login.form
@@ -43,7 +43,6 @@
                           <EmptySpace min="-2" pref="140" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="2" attributes="0">
                               <Component id="jbtn_Login" alignment="2" min="-2" max="-2" attributes="0"/>
-                              <Component id="jtf_Email" alignment="2" min="-2" pref="120" max="-2" attributes="0"/>
                               <Component id="jpf_Password" alignment="2" min="-2" pref="120" max="-2" attributes="0"/>
                               <Component id="jlbl_Sign_Up" alignment="2" min="-2" max="-2" attributes="0"/>
                               <Component id="jlbl__Forgot_Password" alignment="2" min="-2" max="-2" attributes="0"/>
@@ -52,13 +51,17 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="141" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="2" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jlbl_Password" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="jlbl_Email" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="jlbl_Email" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                  <Component id="jtf_Email" min="-2" pref="120" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="140" max="32767" attributes="0"/>
+                  <EmptySpace pref="93" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -68,10 +71,11 @@
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="jlbl_Login" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                  <Component id="jlbl_Email" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                  <Component id="jtf_Email" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jlbl_Email" min="-2" max="-2" attributes="0"/>
+                      <Component id="jtf_Email" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                   <Component id="jlbl_Password" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jpf_Password" min="-2" max="-2" attributes="0"/>
