--- a/src/view/Water.form
+++ b/src/view/Water.form
@@ -418,7 +418,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="16" green="16" red="17" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="kWh Used"/>
+                <Property name="text" type="java.lang.String" value="M&#xb3; Used"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jLabel14.setBackground(new java.awt.Color(0,0,0,1));"/>
